<?xml version='1.0'?>
<?xml-model href='http://download.ros.org/schema/package_format3.xsd' schematypens='http://www.w3.org/2001/XMLSchema'?>
<package format='3'>
  <name>abb_irb4600_40_255</name>
  <version>0.0.0</version>
  <description>The abb_irb4600_40_255 package</description>
  <maintainer email='rust@arch.ethz.ch'>Romana Rust</maintainer>
  <maintainer email='anton@tetov.se'>Anton Tetov</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>abb_resources</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
